src/objects/FSL__CreateFilterEvent__e.object
<CustomObject>
    <fields>
        <fullName>FSL__AppointmentListId__c</fullName>
        <label>Appointment List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Description__c</fullName>
        <label>Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__FilterCategory__c</fullName>
        <label>Filter Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__FilterName__c</fullName>
        <label>Filter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__LoadFilterImmediately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Load Filter Immediately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__ServiceApptIds__c</fullName>
        <label>Service Ids</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__TerritoryIds__c</fullName>
        <label>Territory Ids</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Create Filter Event</label>
    <pluralLabel>Create Filter Events</pluralLabel>
</CustomObject>